--- a/login/login.html
+++ b/login/login.html
@@ -19,7 +19,7 @@
 	
 	<body>
 	<center>
-		<img src="/start up jasaku/images/jasaku.png" alt="login">
+		<img src="../images/jasaku.png" alt="login">
 		<p>"Melayani kapanpun dan dimana pun"</p>
 	</center>
 	
