--- a/login/login.html
+++ b/login/login.html
@@ -71,8 +71,8 @@
 					<p class="help-block text-danger"></p>
 				  </div>
 				  <div class="mrgn-30-top">
-					<button type="submit" class="btn btn-larger btn-block"/>
-					Sign up
+					<button type="submit" class="btn btn-larger btn-block">
+					<a class="nav-link" href="#login">Daftar</a>
 					</button>
 				  </div>
 				</form>
@@ -86,13 +86,13 @@
 					<p class="help-block text-danger"></p>
 				  </div>
 				  <div class="form-group">
-					<label> Password<span class="req">*</span> </label>
+					<label> Your Password<span class="req">*</span> </label>
 					<input type="password" class="form-control" id="password" required data-validation-required-message="Please enter your password" autocomplete="off">
 					<p class="help-block text-danger"></p>
 				  </div>
 				  <div class="mrgn-30-top">
-					<button type="submit" class="btn btn-larger btn-block">
-					<a href="../home/home.html">Log in</a>
+					<button type="action-btn" class="btn btn-larger btn-block">
+					<a href="../index.html">Masuk</a>
 					</button>
 				  </div>
 				</form>
