--- a/login/login.html
+++ b/login/login.html
@@ -27,29 +27,14 @@
 	  <div class="container">
 		<div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-md-8 col-md-offset-2">
 		  <div id="userform">
-			<ul class="nav nav-tabs nav-justified" role="tablist">
+			<!-- <ul class="nav nav-tabs nav-justified" role="tablist">
 			  <li class="active"><a href="#signup"  role="tab" data-toggle="tab">Sign up</a></li>
 			  <li><a href="#login"  role="tab" data-toggle="tab">Log in</a></li>
-			</ul>
+			</ul> -->
 			<div class="tab-content">
 			  <div class="tab-pane fade active in" id="signup">
 				<h2 class="text-uppercase text-center"> Sign Up for Free</h2>
 				<form id="signup">
-					<div class="form-group">
-						<label> Username<span class="req">*</span> </label>
-						<input type="tel" class="form-control" id="address" required data-validation-required-message="Please enter your phone number." autocomplete="off">
-						<p class="help-block text-danger"></p>
-					  </div>
-					  <div class="form-group">
-						<label> Name<span class="req">*</span> </label>
-						<input type="tel" class="form-control" id="address" required data-validation-required-message="Please enter your phone number." autocomplete="off">
-						<p class="help-block text-danger"></p>
-					  </div>
-				  <div class="form-group">
-					<label> Address<span class="req">*</span> </label>
-					<input type="tel" class="form-control" id="address" required data-validation-required-message="Please enter your phone number." autocomplete="off">
-					<p class="help-block text-danger"></p>
-				  </div>
 				  <div class="form-group">
 					<label> Email<span class="req">*</span> </label>
 					<input type="email" class="form-control" id="email" required data-validation-required-message="Please enter your email address." autocomplete="off">
@@ -61,19 +46,15 @@
 					<p class="help-block text-danger"></p>
 				  </div>
 				  <div class="form-group">
-					<label> WhatsApp Number<span class="req">*</span> </label>
-					<input type="tel" class="form-control" id="wa" required data-validation-required-message="Please enter your phone number." autocomplete="off">
-					<p class="help-block text-danger"></p>
-				  </div>
-				  <div class="form-group">
 					<label> Password<span class="req">*</span> </label>
 					<input type="password" class="form-control" id="password" required data-validation-required-message="Please enter your password" autocomplete="off">
 					<p class="help-block text-danger"></p>
 				  </div>
 				  <div class="mrgn-30-top">
 					<button type="submit" class="btn btn-larger btn-block">
-					<a class="nav-link" href="#login">Daftar</a>
+						<a href="#login"  role="tab" data-toggle="tab">Daftar</a>
 					</button>
+					<p>Sudah punya akun?<a href="#login" role="tab" data-toggle="tab"> Masuk</a></p>
 				  </div>
 				</form>
 			  </div>
@@ -94,6 +75,7 @@
 					<button type="action-btn" class="btn btn-larger btn-block">
 					<a href="../index.html">Masuk</a>
 					</button>
+					<p>Belum punya akun?<a href="#signup" role="tab" data-toggle="tab"> Daftar</a>
 				  </div>
 				</form>
 			  </div>
