--- a/index.html
+++ b/index.html
@@ -862,12 +862,12 @@
 
         <!-- TESTIMONIALS, CTA & SERVICE -->
 
-    <div>
+    <!-- <div>
         <div class="container">
-          <div class="testimonials-box">
+          <div class="testimonials-box"> -->
         <!-- TESTIMONIALS -->
 
-          <div class="testimonial">
+          <!-- <div class="testimonial">
             <h2 class="title">testimonial</h2>
             <div class="testimonial-card">
               <img src="./assets/images/testimonial-1.jpg" alt="alan doe" class="testimonial-banner" width="80" height="80">
@@ -879,13 +879,13 @@
                 dolor dolor sit amet.
               </p>
             </div>
-          </div>
+          </div> -->
 
           <!-- AKHIR TESTIMONIALS -->
 
           <!-- CTA -->
 
-          <div class="cta-container">
+          <!-- <div class="cta-container">
 
             <img src="./assets/images/cta-banner.jpg" alt="summer collection" class="cta-banner">
 
@@ -901,13 +901,13 @@
 
             </a>
 
-          </div>
+          </div> -->
 
           <!-- AKHIR CTA -->
 
         <!-- LAYANAN -->
 
-          <div class="service">
+          <!-- <div class="service">
 
             <h2 class="title">Our Services</h2>
 
@@ -996,7 +996,7 @@
 
       </div>
 
-    </div>
+    </div> -->
 
     <!-- AKHIR LAYANAN -->
 
